# pytest_auto-test_7z

./: checkout.py  config.yaml  conftest.py  deploy.py  load_file.py  pyproject.toml  report.html  report.xml  test.py  test_7z_negative.py  test_7z_positive.py
